--- a/docs/_includes/navi.html
+++ b/docs/_includes/navi.html
@@ -1,4 +1,4 @@
 <nav>
-    <a href="/gic" class="btn">Home</a>
-    <a href="/gic/blog" class="btn">Blog</a>
+    <a href="/vcomp" class="btn">Home</a>
+    <a href="/vcomp/blog" class="btn">Blog</a>
 </nav>
